--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,16 +14,15 @@
 
     <div th:if="${error}" class="error-message" th:text="${error}"></div>
 
-    <!-- Alternativ form-implementation -->
     <form action="/login" method="post">
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" value="anders@bilabonnement.dk" required>
+            <input type="email" id="email" name="email" required>
         </div>
 
         <div class="form-group">
             <label for="adgangskode">Adgangskode</label>
-            <input type="password" id="adgangskode" name="adgangskode" value="test123" required>
+            <input type="password" id="adgangskode" name="adgangskode" required>
         </div>
 
         <button type="submit" class="login-button">Log på</button>
