har skrevet et par noter og rettet til

--- a/src/main/resources/templates/lejekontraktOverblik.html
+++ b/src/main/resources/templates/lejekontraktOverblik.html
@@ -30,8 +30,8 @@
         <tbody>
         <tr th:each="lejekontrakt : ${lejekontraktListe}"><!-- Det er en slags for loop bare i HTML den kører listen igennen-->
             <td th:text="${lejekontrakt.kontraktId}"></td> <!-- Erstatter tekstindholdet i et HTML-element med den værdi, der er angivet i udtrykket.-->
-            <td th:text="${lejekontrakt.kundeId}"></td> <!-- $ betyder thymeleaf henter data fra at hente data fra modelobjekter og indsætter det i HTML.-->
-            <td th:text="${lejekontrakt.bilId}"></td>
+            <td th:text="${lejekontrakt.kundeId}"></td> <!-- $ betyder thymeleaf henter data fra modelobjekterne og indsætter det i HTML. -->
+            <td th:text="${lejekontrakt.bilId}"></td> <!-- ${lejekontrakt.bilId en expression, der henter id’et fra det enkelte lejekontrakt-objekt.}-->
             <td th:text="${lejekontrakt.startDato}"></td>
             <td th:text="${lejekontrakt.slutDato}"></td>
             <td th:text="${lejekontrakt.abonnementType}"></td>
@@ -42,26 +42,28 @@
 </div>
 
 
-
+<!-- opret lejekontrakt knappen-->
 <div class="opret-knaplejekontrakt">
     <a href="/opretLejekontrakt">
+
         <button class="opret-knap">Opret ny lejekontrakt</button>
     </a>
 </div>
 
 
-
+<!-- Opdater knappen-->
 <div class="update-knapLejekontrakt">
     <a href="/updateLejekontrakt">
+
         <button class="update-knap">Opdater en lejekontrakt</button>
     </a>
 </div>
 
 
-
+<!--slet knappen, th:action er en Thymeleaf-attribut angiver, hvor formularen skal sende data hen (altså til hvilken URL, den sender det via getmetodden-->
 <div class="slet-knapLejekontrakt">
     <form th:action="@{'/slet-lejekontrakt/' + ${lejekontrakt.kontraktId}}" method="get"
-          onsubmit="return confirm('Er du sikker på, at du vil slette denne lejekontrakt?');">
+          onsubmit="return confirm('Er du sikker på, at du vil slette denne lejekontrakt?');"> <!-- return comfirm er en popup javascript laver-->
         <button type="submit" class="slet-knap">Slet</button>
     </form>
 </div>
