--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bilabonnement A/S - Login</title>
     <link rel="stylesheet" href="/style.css">
 </head>
+
+
 <body class="login-body">
+
 <div class="login-container">
+
     <div class="logo">
         <img src="https://bilabonnement.dk/wp-content/uploads/2020/06/Logo_2.svg" alt="Bilabonnement A/S Logo">
     </div>
@@ -20,10 +25,12 @@
             <input type="email" id="email" name="email" required>
         </div>
 
+
         <div class="form-group">
             <label for="adgangskode">Adgangskode</label>
             <input type="password" id="adgangskode" name="adgangskode" required>
         </div>
+
 
         <button type="submit" class="login-button">Log på</button>
     </form>
@@ -31,6 +38,9 @@
     <div class="forgot-password">
         <a href="#">Glemt adgangskode?</a>
     </div>
+
 </div>
+
+
 </body>
 </html>
