--- a/src/main/resources/templates/tilstandsrapport.html
+++ b/src/main/resources/templates/tilstandsrapport.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <title>Tilstandsrapporter</title>
