har skrevet et par noter og rettet til

--- a/src/main/resources/templates/opretSkaderapport.html
+++ b/src/main/resources/templates/opretSkaderapport.html
@@ -32,5 +32,10 @@
     <button type="submit">Gem</button>
 </form>
 
+    <div class="tilbage-knap">
+        <a href="/skaderapport"></a><button>Tilbage</button>
+    </div>
+
+
 </body>
 </html>
