--- a/src/main/resources/templates/opretTilstandsrapport.html
+++ b/src/main/resources/templates/opretTilstandsrapport.html
@@ -36,5 +36,10 @@
 
 </form>
 
+    <div class="tilbage-knap">
+        <a href="/tilstandsrapport"></a><button>Tilbage</button>
+    </div>
+
+
 </body>
 </html>
