--- a/src/main/resources/templates/updateLejekontrakt.html
+++ b/src/main/resources/templates/updateLejekontrakt.html
@@ -42,6 +42,13 @@
 
     </form>
 </div>
+
+
+<div class="tilbage-knap">
+    <a href="/lejekontraktOverblik"></a> <button>Tilbage til liste</button>
+</div>
+
+
 </body>
 
 </html>
