--- a/src/main/resources/templates/lejekontraktOverblik.html
+++ b/src/main/resources/templates/lejekontraktOverblik.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" th:href="@{/style.css}">
     <meta charset="UTF-8">
     <title>Overblik over lejekontrakterne</title>
 </head>
 
 <body>
+
+<!-- MENUBAR -->
+<nav class="menubar">
+    <ul>
+        <li><a href="/dashboard">Dashboard</a></li>
+
+        <li class="dropdown">
+            <a href="/biloverblik">Biler</a>
+            <div class="dropdown-content">
+                <a href="/biloverblik">Overblik over biler</a>
+                <a href="/bil/opret">Opret ny bil</a>
+            </div>
+        </li>
+
+        <li class="dropdown">
+            <a href="/lejekontraktOverblik">Lejekontrakter</a>
+            <div class="dropdown-content">
+                <a href="/lejekontraktOverblik">Overblik lejekontrakter</a>
+                <a href="/opretLejekontrakt">Opret lejekontrakt</a>
+                <a href="/updateLejekontrakt">Opdater lejekontrakt</a>
+            </div>
+        </li>
+
+        <li><a href="/kundeoverblik">Kunder</a></li>
+
+        <li class="dropdown">
+            <a href="/tilstandsrapport">Rapporter</a>
+            <div class="dropdown-content">
+                <a href="/tilstandsrapport">Tilstandsrapporter</a>
+                <a href="/opretTilstandsrapport">Opret tilstandsrapport</a>
+                <a href="/skaderapport">Skaderapporter</a>
+                <a href="/opretskaderapport">Opret skaderapport</a>
+            </div>
+        </li>
+
+        <li><a href="/logout">Log ud</a></li>
+    </ul>
+</nav>
+<!-- SLUT MENUBAR -->
+
 <div class="intro-kontraktListe">
     <h1>Liste over lejekontrakter</h1>
 </div>
@@ -26,23 +66,19 @@
         </tr>
         </thead>
 
-
-d
         <tbody>
         <tr th:each="lejekontrakt : ${lejekontraktListe}"><!-- Det er en slags for loop bare i HTML den kører listen igennen-->
             <td th:text="${lejekontrakt.kontraktId}"></td> <!-- Erstatter tekstindholdet i et HTML-element med den værdi, der er angivet i udtrykket.-->
             <td th:text="${lejekontrakt.kundeId}"></td> <!-- $ betyder thymeleaf henter data fra modelobjekterne og indsætter det i HTML. -->
-            <td th:text="${lejekontrakt.bilId}"></td> <!-- ${lejekontrakt.bilId en expression, der henter id’et fra det enkelte lejekontrakt-objekt.}-->
+            <td th:text="${lejekontrakt.bilId}"></td> <!-- ${lejekontrakt.bilId en expression, der henter id'et fra det enkelte lejekontrakt-objekt.}-->
             <td th:text="${lejekontrakt.startDato}"></td>
             <td th:text="${lejekontrakt.slutDato}"></td>
             <td th:text="${lejekontrakt.abonnementType ? 'Limeted' : 'onlimeted'}"></td>
             <td th:text="${lejekontrakt.pris}"></td>
-
         </tr>
         </tbody>
     </table>
 </div>
-
 
 <!-- opret lejekontrakt knappen-->
 <div class="opret-knaplejekontrakt">
@@ -51,14 +87,12 @@ d
     </a>
 </div>
 
-
 <!-- Opdater knappen-->
 <div class="update-knapLejekontrakt">
     <a href="/updateLejekontrakt">
         <button class="update-knap">Opdater en lejekontrakt</button>
     </a>
 </div>
-
 
 <!--slet knappen, th:action er en Thymeleaf-attribut angiver, hvor formularen skal sende data hen (altså til hvilken URL, den sender det via getmetodden-->
 <div class="slet-knapLejekontrakt">
@@ -67,7 +101,6 @@ d
         <button type="submit" class="slet-knap">Slet</button>
     </form>
 </div>
-
 
 </body>
 </html>
