--- a/src/main/resources/templates/opretKunde.html
+++ b/src/main/resources/templates/opretKunde.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="da" xmlns:th="http://www.thymeleaf.org">
+<html lang="da">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,6 @@
     <link rel="stylesheet" th:href="@{/style.css}">
 </head>
 
-<body>
 
 <!-- MENUBAR -->
 <nav class="menubar">
@@ -47,6 +46,45 @@
     </ul>
 </nav>
 <!-- SLUT MENUBAR -->
+
+
+
+
+
+<body>
+
+<div class="intro-opretKunde">
+    <h1>Opret kunde</h1>
+</div>
+
+<div class="tabel-opretKunde">
+    <form th:action="@{/opretKunde}" method="post" th:object="${kunde}">
+        <label for="kundeId">Kunde Id</label>
+        <input type="text" id="kundeId" th:field="*{kundeId}" />
+
+        <label for="navn">Navn</label>
+        <input type="text" id="navn" th:field="*{navn}" />
+
+        <label for="adresse">Adresse</label>
+        <input type="text" id="adresse" th:field="*{adresse}" />
+
+        <label for="telefonnr">Telefonnummer</label>
+        <input type="text" id="telefonnr" th:field="*{telefonnr}" />
+
+        <label for="email">Email</label>
+        <input type="email" id="email" th:field="*{email}" />
+
+        <button type="submit">Opret kunde</button>
+    </form>
+</div>
+
+
+
+
+
+<div class="tilbage-knap">
+    <a href="/kundeOversigt"><button>Tilbage</button></a>
+</div>
 
 </body>
 </html>
