tilstandsrapport og skadesrapport opdateres

--- a/src/main/resources/templates/tilstandsrapport.html
+++ b/src/main/resources/templates/tilstandsrapport.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<!-- MENUBAR nn-->
+<!-- MENUBAR nnn-->
 <nav class="menubar">
     <ul>
         <li><a href="/dashboard">Dashboard</a></li>
