--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,36 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bilabonnement A/S - Login</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" th:href="@{/style.css}" type="text/css">
 </head>
 
-
 <body class="login-body">
-
 <div class="login-container">
-
     <div class="logo">
         <img src="https://bilabonnement.dk/wp-content/uploads/2020/06/Logo_2.svg" alt="Bilabonnement A/S Logo">
     </div>
 
     <div th:if="${error}" class="error-message" th:text="${error}"></div>
 
-    <form action="/login" method="post">
+    <form th:action="@{/login}" method="post">
         <div class="form-group">
             <label for="email">Email</label>
             <input type="email" id="email" name="email" required>
         </div>
 
-
         <div class="form-group">
             <label for="adgangskode">Adgangskode</label>
             <input type="password" id="adgangskode" name="adgangskode" required>
         </div>
-
 
         <button type="submit" class="login-button">Log på</button>
     </form>
@@ -38,9 +32,6 @@
     <div class="forgot-password">
         <a href="#">Glemt adgangskode?</a>
     </div>
-
 </div>
-
-
 </body>
 </html>
