--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -4,45 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bilabonnement A/S - Dashboard</title>
-    <link rel="stylesheet" th:href="@{/static/style.css}">
+    <link rel="stylesheet" th:href="@{/style.css}">
 </head>
 <body>
 
 <!-- MENUBAR -->
 <nav class="menubar">
     <ul>
-        <li><a href="/dashboard">Dashboard</a></li>
+        <li><a th:href="@{/dashboard}">Dashboard</a></li>
 
         <li class="dropdown">
-            <a href="/biloverblik">Biler</a>
+            <a th:href="@{/biloverblik}">Biler</a>
             <div class="dropdown-content">
-                <a href="/biloverblik">Overblik over biler</a>
-                <a href="/bil/opret">Opret ny bil</a>
+                <a th:href="@{/biloverblik}">Overblik over biler</a>
+                <a th:href="@{/bil/opret}">Opret ny bil</a>
             </div>
         </li>
 
         <li class="dropdown">
-            <a href="/lejekontraktOverblik">Lejekontrakter</a>
+            <a th:href="@{/lejekontraktOverblik}">Lejekontrakter</a>
             <div class="dropdown-content">
-                <a href="/lejekontraktOverblik">Overblik lejekontrakter</a>
-                <a href="/opretLejekontrakt">Opret lejekontrakt</a>
-                <a href="/updateLejekontrakt">Opdater lejekontrakt</a>
+                <a th:href="@{/lejekontraktOverblik}">Overblik lejekontrakter</a>
+                <a th:href="@{/opretLejekontrakt}">Opret lejekontrakt</a>
+                <a th:href="@{/updateLejekontrakt}">Opdater lejekontrakt</a>
             </div>
         </li>
 
-        <li><a href="/kundeoverblik">Kunder</a></li>
+        <li><a th:href="@{/kundeoverblik}">Kunder</a></li>
 
         <li class="dropdown">
-            <a href="/tilstandsrapport">Rapporter</a>
+            <a th:href="@{/tilstandsrapport}">Rapporter</a>
             <div class="dropdown-content">
-                <a href="/tilstandsrapport">Tilstandsrapporter</a>
-                <a href="/opretTilstandsrapport">Opret tilstandsrapport</a>
-                <a href="/skaderapport">Skaderapporter</a>
-                <a href="/opretskaderapport">Opret skaderapport</a>
+                <a th:href="@{/tilstandsrapport}">Tilstandsrapporter</a>
+                <a th:href="@{/opretTilstandsrapport}">Opret tilstandsrapport</a>
+                <a th:href="@{/skaderapport}">Skaderapporter</a>
+                <a th:href="@{/opretskaderapport}">Opret skaderapport</a>
             </div>
         </li>
 
-        <li><a href="/logout">Log ud</a></li>
+        <li><a th:href="@{/logout}">Log ud</a></li>
     </ul>
 </nav>
 <!-- SLUT MENUBAR -->
@@ -53,7 +53,7 @@
     </div>
     <div class="user-info">
         <span th:text="${medarbejderNavn}">Medarbejder Navn</span>
-        <a href="/logout">Log ud</a>
+        <a th:href="@{/logout}">Log ud</a>
     </div>
 </div>
 
